RegisterChildFragment LoginFragment PilihProfilAnakFragment

--- a/app/src/main/res/layout/fragment_pick_child.xml
+++ b/app/src/main/res/layout/fragment_pick_child.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PilihProfilAnakFragment"
+    tools:context=".PickChildFragment"
     android:paddingTop="50dp"
     android:paddingStart="40dp"
     android:paddingEnd="40dp"
