--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -41,13 +41,13 @@
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editPassword"
+        android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Buat Kata Sandi"
         android:layout_marginBottom="10dp"
-        android:inputType="numberPassword" />
+        android:inputType="number|text" />
 
     <EditText
         android:id="@+id/editTextKonfirmasiPassword"
@@ -56,7 +56,7 @@
         android:ems="10"
         android:hint="Ulangi Kata Sandi"
         android:layout_marginBottom="10dp"
-        android:inputType="numberPassword" />
+        android:inputType="number|text" />
 
     <EditText
         android:id="@+id/editTextJenisKelamin"
@@ -65,25 +65,43 @@
         android:ems="10"
         android:hint="Jenis Kelamin"
         android:layout_marginBottom="10dp"
-        android:inputType="" />
+        android:inputType="textFilter" />
 
     <EditText
-        android:id="@+id/editPilihUmur"
+        android:id="@+id/editTextUmur"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Umur"
         android:layout_marginBottom="10dp"
-        android:inputType="" />
+        android:inputType="number|text" />
 
     <EditText
-        android:id="@+id/editPilihJumlahAnak"
-        android:layout_width="match_parent"
+        android:id="@+id/editTextJumlahAnak"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Jumlah Anak"
         android:layout_marginBottom="10dp"
-        android:inputType="" />
+        android:inputType="number|text" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="punya akun?" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="klik disini." />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text=">" />
 
 </LinearLayout>
