firebase & firestore konek

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="27dp"
         android:layout_toRightOf="@id/imageView2"
-        android:Layout_marginRight="20dp"
+        android:layout_marginRight="20dp"
         android:text="Selamat Datang, William!" />
 
     <TextView
