update home ada bottom button

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -158,4 +158,4 @@
         android:layout_toLeftOf="@id/buttonhome"
         app:icon="@android:drawable/arrow_up_float" />
 
-</FrameLayout>
+</RelativeLayout>
