--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -26,17 +26,17 @@
         android:id="@+id/textAnakKeBerapa"
         android:layout_width="93dp"
         android:layout_height="17dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="50dp"
-        android:text="Anak Pertama"/>
+        android:text="Anak Pertama"
+        tools:layout_editor_absoluteX="67dp"
+        tools:layout_editor_absoluteY="50dp" />
 
     <Button
         android:id="@+id/buttonPilih"
         android:layout_width="81dp"
         android:layout_height="37dp"
-        tools:layout_editor_absoluteX="235dp"
-        tools:layout_editor_absoluteY="39dp"
-        android:text="Pilih"/>
+        android:text="Pilih"
+        tools:layout_editor_absoluteX="191dp"
+        tools:layout_editor_absoluteY="40dp" />
 
     <TextView
         android:id="@+id/textTahun1"
