--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -1,4 +1,4 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -295,4 +295,4 @@
         tools:layout_editor_absoluteX="151dp"
         tools:layout_editor_absoluteY="611dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
