--- a/app/src/main/res/layout/activity_immunization.xml
+++ b/app/src/main/res/layout/activity_immunization.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -15,7 +16,7 @@
         android:text="Imunisasi" />
 
     <TextView
-        android:id="@+id/textapakah"
+        android:id="@+id/textpertanyaan"
         android:layout_width="400dp"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="70dp"
@@ -93,15 +94,15 @@
         android:layout_height="wrap_content"
         android:text="1 - 4 Tahun"
         tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="272dp" />
+        tools:layout_editor_absoluteY="322dp" />
 
     <CheckBox
         android:id="@+id/checkBoxselesai2"
         android:layout_width="wrap_content"
         android:layout_height="34dp"
         android:text="Selesai"
-        tools:layout_editor_absoluteX="143dp"
-        tools:layout_editor_absoluteY="266dp" />
+        tools:layout_editor_absoluteX="141dp"
+        tools:layout_editor_absoluteY="316dp" />
 
     <CheckBox
         android:id="@+id/checkBoxHepaB"
@@ -116,183 +117,23 @@
         android:layout_width="89dp"
         android:layout_height="22dp"
         android:text="Campak"
-        tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="142dp" />
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="266dp" />
 
     <CheckBox
         android:id="@+id/checkBoxDPT"
         android:layout_width="90dp"
         android:layout_height="23dp"
         android:text="DPT"
-        tools:layout_editor_absoluteX="198dp"
-        tools:layout_editor_absoluteY="165dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxDPT2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="DPT"
         tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="307dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxTifoid"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Tifoid"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="327dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxPolio2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Polio"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="350dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxHepaA"
-        android:layout_width="109dp"
-        android:layout_height="23dp"
-        android:text="Hepatitis A"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="377dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxpcv2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="PCV"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="400dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxVarisela"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Varisela"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="306dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxMMR"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="MMR"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="334dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxInflu"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Influenza"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="361dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxCampak2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Campak"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="384dp" />
+        tools:layout_editor_absoluteY="291dp" />
 
     <TextView
         android:id="@+id/textTahun3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="5 - 12 Tahun"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="434dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxselesai3"
-        android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:text="Selesai"
-        tools:layout_editor_absoluteX="140dp"
-        tools:layout_editor_absoluteY="427dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxDPT3"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="DPT"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="461dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxTifoid2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Tifoid"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="488dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxPolio3"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Polio"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="511dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxHepaA2"
-        android:layout_width="109dp"
-        android:layout_height="23dp"
-        android:text="Hepatitis A"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="534dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxpcv3"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="PCV"
-        tools:layout_editor_absoluteX="110dp"
-        tools:layout_editor_absoluteY="561dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxVarisela2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Varisela"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="461dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxMMR2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="MMR"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="488dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxInflu2"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Influenza"
-        tools:layout_editor_absoluteX="213dp"
-        tools:layout_editor_absoluteY="511dp" />
-
-    <CheckBox
-        android:id="@+id/checkBoxCampak3"
-        android:layout_width="90dp"
-        android:layout_height="23dp"
-        android:text="Campak"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="534dp" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_media_rew"
-        tools:layout_editor_absoluteX="151dp"
-        tools:layout_editor_absoluteY="611dp" />
+        tools:layout_editor_absoluteX="114dp"
+        tools:layout_editor_absoluteY="481dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
